--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "vue": "^3.3.4",
+    "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.2.5",
     "vue3-material": "^1.0.8"
   },
