--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.3.67",
+    "@vue-hero-icons/outline": "^1.7.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "firebase": "^10.4.0",
     "vue": "^3.3.4",
-    "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.2.5",
     "vue3-material": "^1.0.8"
   },
