--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
+    "mdb-vue-ui-kit": "^4.1.1",
     "vue": "^3.3.4",
     "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.2.5",
