--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "mdb-vue-ui-kit": "^4.1.1",
+    "moment": "^2.29.4",
     "vue": "^3.3.4",
     "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.2.5",
